Completed part1 and also added images folder

--- a/index.html
+++ b/index.html
@@ -5,6 +5,74 @@
     <title>Girl Develop It</title>
   </head>
   <body>
-    <h1>Heyy There</h1>
+    <img src="images\gitlDevelopItLogo.png" alt="girl develop it logo">
+
+    <section id="Part-1">
+
+    <div class="about">
+    <h1>About</h1>
+    <p>It can be intimidating for women to learn and ask questions when they are inn an
+    <strong>extreme minority.</strong>While open and welcoming,today's budding developer communityis up to <strong>91% male.
+    </strong>If we can empower more females with the confidence in their technological capabilities <i>we can begin to change this landscape</i></p>
+    </div>
+
+    <div class="our-locations">
+      <ul>
+        <li>USA</li>
+        <ul>
+          <li><a href="https://en.wikipedia.org/wiki/New_York_City">New York</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Columbus,_Ohio">Columbus</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Austin,_Texas">Austin</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Philadelphia">Philly</a></li>
+        </ul>
+        <li>World</li>
+        <ul>
+          <li><a href="https://en.wikipedia.org/wiki/Ottawa">Ottawa</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Sydney">Sydney</a></li>
+        </ul>
+        </ul>
+    </div>
+
+    <div class="social-media-accounnts">
+      <a href="#">Twitter |</a>
+      <a href="https://www.facebook.com/kushidharreddy.chinthala">Facebook |</a>
+      <a href="#">Instagram</a>
+    </div>
+
+    </section>
+
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--  -->
