Added the Instagram and twitter links

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </div>
 
     <div class="social-media-accounnts">
-      <a href="#">Twitter |</a>
+      <a href="https://twitter.com/Kushidhar_3">Twitter |</a>
       <a href="https://www.facebook.com/kushidharreddy.chinthala">Facebook |</a>
-      <a href="#">Instagram</a>
+      <a href="https://www.instagram.com/kushidhar_/">Instagram</a>
     </div>
 
     </section>
