--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Girl Develop It</title>
   </head>
   <body>
+
     <img src="images\gitlDevelopItLogo.png" alt="girl develop it logo">
 
     <section id="Part-1">
@@ -40,6 +41,33 @@
     </div>
 
     </section>
+
+    <section id="Part-2">
+      <div class="upcoming-classes">
+        <h1>Upcoming Classes</h1>
+        <table border="1">
+          <thead>
+            <tr>
+              <th>Location</th>
+              <th>Topic</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Newy York</td>
+              <td>JavaScript & jQuery</td>
+            </tr>
+            <tr>
+              <td>San Francisco</td>
+              <td>HTML & CSS</td>
+            </tr>
+          </tbody>
+        </table>
+
+
+      </div>
+    </section>
+
 
   </body>
 </html>
