--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </thead>
           <tbody>
             <tr>
-              <td>New York City</td>
+              <td>New York City,USA</td>
               <td>JavaScript & jQuery</td>
             </tr>
             <tr>
