Back to Previous work

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </thead>
           <tbody>
             <tr>
-              <td>New York City,USA</td>
+              <td>New York</td>
               <td>JavaScript & jQuery</td>
             </tr>
             <tr>
