Added Part 3 and moved social media section to last

--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
         </ul>
     </div>
 
-    <div class="social-media-accounnts">
-      <a href="https://twitter.com/Kushidhar_3">Twitter |</a>
-      <a href="https://www.facebook.com/kushidharreddy.chinthala">Facebook |</a>
-      <a href="https://www.instagram.com/kushidhar_/">Instagram</a>
-    </div>
+
 
     </section>
 
@@ -70,7 +66,43 @@
 
     </section>
 
+    <section id="Part-3">
+      <div class="html-form">
+        <h1>Sign Up!</h1>
+        <form  action="index.html" method="post">
 
+          <label> Name:
+            <input type="text" name="" value="" placeholder="Enter your name">
+          </label><br>
+          <label> Email:
+            <input type="email" name="" value="">
+          </label>
+            <fieldset>
+              <legend>Gender:</legend>
+              <label for="female">Female:
+                <input type="radio" name="gender" id ="female" value="female">
+              </label>
+              <label>Male:
+                <input type="radio" name="gender" id="male" value="male">
+              </label>
+            </fieldset>
+            <label>Experience:<br>
+              <textarea name="" rows="8" cols="80"></textarea>
+            </label>
+            <button type="submit" name="button">Sign Up</button>
+            <button type="reset" name="button">Reset</button>
+        </form>
+
+
+
+      </div>
+    </section>
+
+    <div class="social-media-accounnts">
+      <a href="https://twitter.com/Kushidhar_3">Twitter |</a>
+      <a href="https://www.facebook.com/kushidharreddy.chinthala">Facebook |</a>
+      <a href="https://www.instagram.com/kushidhar_/">Instagram</a>
+    </div>
   </body>
 </html>
 
