Properly Indented and also added comments for readability of code

--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
   <body>
 
     <img src="images\gitlDevelopItLogo.png" alt="girl develop it logo">
-
+<!-- ****************************************PART-1****************************************** -->
     <section id="Part-1">
-
     <div class="about">
     <h1>About</h1>
-    <p>It can be intimidating for women to learn and ask questions when they are inn an
-    <strong>extreme minority.</strong>While open and welcoming,today's budding developer communityis up to <strong>91% male.
-    </strong>If we can empower more females with the confidence in their technological capabilities <i>we can begin to change this landscape</i></p>
+    <p>It can be intimidating for women to learn and ask questions when they are in an<strong>extreme minority.</strong>While open and welcoming,today's budding developer communityis up to <strong>91% male.
+    </strong>If we can empower more females with the confidence in their technological capabilities <i>we can begin to change this landscape</i> </p>
     </div>
-
     <div class="our-locations">
       <ul>
         <li>USA</li>
@@ -33,15 +30,10 @@
         </ul>
         </ul>
     </div>
-
-
-
     </section>
-
+<!-- ****************************************PART-2****************************************** -->
     <section id="Part-2">
-
       <div class="upcoming-classes">
-
         <h1>Upcoming Classes</h1>
         <table border="1">
           <thead>
@@ -61,16 +53,13 @@
             </tr>
           </tbody>
         </table>
-
       </div>
-
     </section>
-
+<!-- ****************************************PART-3****************************************** -->
     <section id="Part-3">
       <div class="html-form">
         <h1>Sign Up!</h1>
         <form  action="index.html" method="post">
-
           <label> Name:
             <input type="text" name="" value="" placeholder="Enter your name">
           </label><br>
@@ -92,12 +81,9 @@
             <button type="submit" name="button">Sign Up</button>
             <button type="reset" name="button">Reset</button>
         </form>
-
-
-
       </div>
     </section>
-
+<!-- ****************************************SOCIAL MEDIA ACCOUNTS****************************************** -->
     <div class="social-media-accounnts">
       <a href="https://twitter.com/Kushidhar_3">Twitter |</a>
       <a href="https://www.facebook.com/kushidharreddy.chinthala">Facebook |</a>
@@ -105,36 +91,3 @@
     </div>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--  -->
