--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Girl Develop It</title>
   </head>
   <body>
-
+<!-- **************************************** LOGO ****************************************** -->
     <img src="images\gitlDevelopItLogo.png" alt="girl develop it logo">
 <!-- ****************************************PART-1****************************************** -->
     <section id="Part-1">
@@ -83,11 +83,12 @@
         </form>
       </div>
     </section>
-<!-- ****************************************SOCIAL MEDIA ACCOUNTS****************************************** -->
+<!-- ************************************SOCIAL MEDIA ACCOUNTS******************************* -->
     <div class="social-media-accounnts">
       <a href="https://twitter.com/Kushidhar_3">Twitter |</a>
       <a href="https://www.facebook.com/kushidharreddy.chinthala">Facebook |</a>
       <a href="https://www.instagram.com/kushidhar_/">Instagram</a>
     </div>
+<!-- ***************************************FINISHED***************************************** -->
   </body>
 </html>
