Fixed Validation Errors

--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
     </div>
     <div class="our-locations">
       <ul>
-        <li>USA</li>
-        <ul>
-          <li><a href="https://en.wikipedia.org/wiki/New_York_City">New York</a></li>
-          <li><a href="https://en.wikipedia.org/wiki/Columbus,_Ohio">Columbus</a></li>
-          <li><a href="https://en.wikipedia.org/wiki/Austin,_Texas">Austin</a></li>
-          <li><a href="https://en.wikipedia.org/wiki/Philadelphia">Philly</a></li>
-        </ul>
-        <li>World</li>
-        <ul>
-          <li><a href="https://en.wikipedia.org/wiki/Ottawa">Ottawa</a></li>
-          <li><a href="https://en.wikipedia.org/wiki/Sydney">Sydney</a></li>
-        </ul>
+
+        <li>USA
+          <ul>
+            <li><a href="https://en.wikipedia.org/wiki/New_York_City">New York</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Columbus,_Ohio">Columbus</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Austin,_Texas">Austin</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Philadelphia">Philly</a></li>
+          </ul>
+        </li>
+        <li>World
+          <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Ottawa">Ottawa</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Sydney">Sydney</a></li>
+          </ul>
+        </li>
         </ul>
     </div>
     </section>
@@ -61,10 +64,10 @@
         <h1>Sign Up!</h1>
         <form  action="index.html" method="post">
           <label> Name:
-            <input type="text" name="" value="" placeholder="Enter your name">
+            <input type="text" name="name" value="" placeholder="Enter your name">
           </label><br>
           <label> Email:
-            <input type="email" name="" value="">
+            <input type="email" name="email-id" value="">
           </label>
             <fieldset>
               <legend>Gender:</legend>
@@ -76,8 +79,9 @@
               </label>
             </fieldset>
             <label>Experience:<br>
-              <textarea name="" rows="8" cols="80"></textarea>
+              <textarea name="experience" rows="4" cols="40"></textarea>
             </label>
+            <br>
             <button type="submit" name="button">Sign Up</button>
             <button type="reset" name="button">Reset</button>
         </form>
