Updated with select element

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 <!-- **************************************** LOGO ****************************************** -->
-    <img src="images\gitlDevelopItLogo.png" alt="girl develop it logo">
+    <img src="images\gitlDevelopItLogo.png" alt="girl develop it logo"><hr>
 <!-- ****************************************PART-1****************************************** -->
     <section id="Part-1">
     <div class="about">
@@ -33,7 +33,7 @@
         </li>
         </ul>
     </div>
-    </section>
+    </section><hr>
 <!-- ****************************************PART-2****************************************** -->
     <section id="Part-2">
       <div class="upcoming-classes">
@@ -57,7 +57,7 @@
           </tbody>
         </table>
       </div>
-    </section>
+    </section><hr>
 <!-- ****************************************PART-3****************************************** -->
     <section id="Part-3">
       <div class="html-form">
@@ -68,31 +68,39 @@
           </label><br>
           <label> Email:
             <input type="email" name="email-id" value="">
-          </label>
-            <fieldset>
-              <legend>Gender:</legend>
-              <label for="female">Female:
-                <input type="radio" name="gender" id ="female" value="female">
-              </label>
-              <label>Male:
-                <input type="radio" name="gender" id="male" value="male">
-              </label>
-            </fieldset>
-            <label>Experience:<br>
-              <textarea name="experience" rows="4" cols="40"></textarea>
+          </label><br><br>
+          <fieldset>
+            <legend>Gender:</legend>
+            <label for="female">Female:
+              <input type="radio" name="gender" id ="female" value="female">
             </label>
-            <br>
-            <button type="submit" name="button">Sign Up</button>
-            <button type="reset" name="button">Reset</button>
+            <label>Male:
+              <input type="radio" name="gender" id="male" value="male">
+            </label>
+          </fieldset><br>
+          <label>Select City:
+            <select  name="select-city">
+              <option value="san-Francisco">San Francisco</option>
+              <option value="New-York">New York</option>
+            </select>
+          </label><br><br>
+          <label>Experience:<br>
+            <textarea name="experience" rows="4" cols="40"></textarea>
+          </label>
+          <br>
+          <button type="submit" name="button">Sign Up</button>
+          <button type="reset" name="button">Reset</button>
         </form>
       </div>
     </section>
 <!-- ************************************SOCIAL MEDIA ACCOUNTS******************************* -->
+    <hr>
     <div class="social-media-accounnts">
       <a href="https://twitter.com/Kushidhar_3">Twitter |</a>
       <a href="https://www.facebook.com/kushidharreddy.chinthala">Facebook |</a>
       <a href="https://www.instagram.com/kushidhar_/">Instagram</a>
     </div>
+    <hr>
 <!-- ***************************************FINISHED***************************************** -->
   </body>
 </html>
